--- a/auto-purge/auto-purge.ini
+++ b/auto-purge/auto-purge.ini
@@ -1,8 +1,12 @@
 # Configuration file for ec2-auto-purge.py
 
 [global]
-default-aws-region = eu-west
+aws-region = eu-west-1
 tag-name = auto-purge
+aws-access-key = XXXXXXXXXXXXX
+aws-secret-key = XXXXXXXXXXXXX
 
 [office-hours-only]
 tag-value = office-hours-only
+hour = 18
+action = stop
